many more fixes
1. poza echipa cropped
2. de reparat numere rezultate
3. de redimensionat poza cu echipa
4. meniul cu navbar pe telefon de fixat ca e retardat
padding top la rezultate pe telefon
5. reparat dimensiunile pozelor de la rezultate
6. reordonat liderii

--- a/assets/css/rezultate.css
+++ b/assets/css/rezultate.css
@@ -236,10 +236,7 @@ ul li .date {
 }
 
 @media (max-width:480px) {
-  .cards {
-    grid-template-columns: 1fr;
-    padding: 10px;
-  }
+  .cards { grid-template-columns: 1fr; }
   .card-s {
     flex-direction: column;
     align-items: flex-start;
